адаптивка без картинок и меню

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
 
     <!-- фильтр проектов -->
 
-      <div class="portfolio__container">
+      <div class="portfolio__container container">
         <ul class="portfolio__filter-list list">
           <li class="portfolio__item"><button type="button" class="portfolio__filter-button button">Все</button></li>
           <li class="portfolio__item"><button type="button" class="portfolio__filter-button button">Веб-сайты</button></li>
