--- a/index.html
+++ b/index.html
@@ -22,8 +22,27 @@
         <nav class="nav">
           <a href="./index.html" class="logo nav__logo"><span class="logo--accent">Web</span>Studio</a>
 
-          <ul class="nav__list">
-            <li class="nav__item"><a href="./index.html" class=" nav__link--active">Студия</a></li>
+          <button
+          type="button"
+          class="nav__button"
+          aria-expanded="false"
+          aria-controls="menu-container"
+          data-menu-button>
+          <svg
+          width="24"
+          height="16"
+          aria-label="Переключатель мобильного меню">
+            <use class="close-icon" href="./images/sprite.svg#close-btn"></use>
+            <use class="menu-icon" href="./images/sprite.svg#menu-icon"></use>
+          </svg>
+          </button>
+
+
+
+
+
+          <ul class="nav__list" id="menu-container" data-menu>
+            <li class="nav__item"><a href="./index.html" class="nav__link nav__link--active">Студия</a></li>
             <li class="nav__item"><a href="./portfolio.html" class="nav__link">Портфолио</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
           </ul>
@@ -581,6 +600,7 @@
         </button>
       </div>
     </div>
+    <script src="./js/menu.js"></script>
     <script src="./js/madal.js"></script>
   </body>
 </html>
