--- a/index.html
+++ b/index.html
@@ -37,11 +37,62 @@
           </svg>
           </button>
 
+          <div class="mob-menu" id="menu-container" data-menu>
+
+            <ul class="mob-nav__list">
+              <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link mob-nav__link--active">Студия</a></li>
+              <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link">Портфолио</a></li>
+              <li class="mob-nav__item"><a href="#" class="mob-nav__link">Контакты</a></li>
+            </ul>
+
+            <ul class="mob-contacts">
+
+              <li class="mob-contacts__item">
+                <a href="tel:+380961111111" class="mob-contacts__link mob-contacts__link--tel">
+                  +38 096 111 11 11</a>
+              </li>
+
+              <li class="mob-contacts__item">
+                <a href="mailto:info@devstudio.com" class="mob-contacts__link mob-contacts__link--mail">
+                  info@devstudio.com
+                </a>
+              </li>
+
+            </ul>
+
+            <ul class="mob-socials">
+              <li class="mob-socials__item">
+                <a href="" class="mob-socials__link">
+                  Instagram
+                </a>
+              </li>
+
+              <li class="mob-socials__item">
+                <a href="" class="mob-socials__link">
+                  Twitter
+                </a>
+              </li>
+
+              <li class="mob-socials__item">
+                <a href="" class="mob-socials__link">
+                  Facebook
+                </a>
+              </li>
+
+              <li class="mob-socials__item">
+                <a href="" class="mob-socials__link">
+                  LinkedIn
+                </a>
+              </li>
+            </ul>
+
+          </div>
 
 
 
 
-          <ul class="nav__list" id="menu-container" data-menu>
+
+          <ul class="nav__list">
             <li class="nav__item"><a href="./index.html" class="nav__link nav__link--active">Студия</a></li>
             <li class="nav__item"><a href="./portfolio.html" class="nav__link">Портфолио</a></li>
             <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
