--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,64 @@
       <nav class="nav">
         <a href="./index.html" class="logo nav__logo"><span class="logo--accent">Web</span>Studio</a>
 
+                  <button type="button" class="nav__button" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                    <svg width="24" height="16" aria-label="Переключатель мобильного меню">
+                      <use class="close-icon" href="./images/sprite.svg#close-btn"></use>
+                      <use class="menu-icon" href="./images/sprite.svg#menu-icon"></use>
+                    </svg>
+                  </button>
+
+                  <div class="mob-menu" id="menu-container" data-menu>
+
+                    <ul class="mob-nav__list">
+                      <li class="mob-nav__item"><a href="./index.html" class="mob-nav__link">Студия</a></li>
+                      <li class="mob-nav__item"><a href="./portfolio.html" class="mob-nav__link mob-nav__link--active">Портфолио</a></li>
+                      <li class="mob-nav__item"><a href="#" class="mob-nav__link">Контакты</a></li>
+                    </ul>
+
+                    <ul class="mob-contacts">
+
+                      <li class="mob-contacts__item">
+                        <a href="tel:+380961111111" class="mob-contacts__link mob-contacts__link--tel">
+                          +38 096 111 11 11</a>
+                      </li>
+
+                      <li class="mob-contacts__item">
+                        <a href="mailto:info@devstudio.com" class="mob-contacts__link mob-contacts__link--mail">
+                          info@devstudio.com
+                        </a>
+                      </li>
+
+                    </ul>
+
+                    <ul class="mob-socials">
+                      <li class="mob-socials__item">
+                        <a href="" class="mob-socials__link">
+                          Instagram
+                        </a>
+                      </li>
+
+                      <li class="mob-socials__item">
+                        <a href="" class="mob-socials__link">
+                          Twitter
+                        </a>
+                      </li>
+
+                      <li class="mob-socials__item">
+                        <a href="" class="mob-socials__link">
+                          Facebook
+                        </a>
+                      </li>
+
+                      <li class="mob-socials__item">
+                        <a href="" class="mob-socials__link">
+                          LinkedIn
+                        </a>
+                      </li>
+                    </ul>
+
+                  </div>
+
         <ul class="nav__list">
           <li class="nav__item"><a href="./index.html" class=" nav__link">Студия</a></li>
           <li class="nav__item"><a href="./portfolio.html" class="nav__link--active">Портфолио</a></li>
@@ -358,6 +416,8 @@
 
     </div>
   </footer>
+
+  <script src="./js/menu.js"></script>
 </body>
 
 </html>
