--- a/portfolio.html
+++ b/portfolio.html
@@ -170,7 +170,7 @@
                 </div>
               </div>
 
-              <div class="project__descr">
+              <div class="project__descr higher">
                 <h2 class="project__name">Tехнокряк</h2>
                 <p class="project__type">Веб-сайт</p>
               </div>
@@ -211,7 +211,7 @@
                 </div>
               </div>
 
-              <div class="project__descr">
+              <div class="project__descr higher">
                 <h2 class="project__name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="project__type">Дизайн</p>
               </div>
@@ -499,67 +499,68 @@
   <!-- футер -->
   <footer class="footer">
     <div class="container footer__container">
-      <div class="footer__contact-info contact-info">
-        <a href="./index.html" class="logo footer__logo"><span class="logo--accent">Web</span>Studio</a>
 
+      <div class="footer__wrapper">
+        <div class="footer__contact-info contact-info">
+          <a href="./index.html" class="logo footer__logo"><span class="logo--accent">Web</span>Studio</a>
 
-        <address class="footer-contacts">
-          <ul class="footer-contacts__list">
+          <address class="footer-contacts">
+            <ul class="footer-contacts__list">
 
-            <li class="footer-contacts__item"><a href="#" class="footer-contacts__physical-address">г. Киев, пр-т Леси
-                Украинки, 26 </a></li>
+              <li class="footer-contacts__item"><a href="#" class="footer-contacts__physical-address">г. Киев, пр-т Леси
+                  Украинки, 26 </a></li>
 
-            <li class="footer-contacts__item"><a href="mailto:info@example.com"
-                class="footer-contacts__email">info@example.com</a></li>
+              <li class="footer-contacts__item"><a href="mailto:info@example.com"
+                  class="footer-contacts__email">info@example.com</a></li>
 
-            <li class="contacts__item"><a href="tel:+380991111111" class="footer-contacts__tel">+38 099 111 11 11</a></li>
+              <li class="footer-contacts__item"><a href="tel:+380991111111" class="footer-contacts__tel">+38 099 111 11
+                  11</a></li>
 
+            </ul>
+          </address>
+        </div>
+
+        <div class="join">
+          <h2 class="join__title">присоединяйтесь</h2>
+          <ul class="join-socials">
+
+            <li class="join-socials__item">
+              <a href="" class="join-socials__link">
+                <svg class="join-socials__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+
+            </li>
+            <li class="join-socials__item">
+              <a href="" class="join-socials__link">
+                <svg class="join-socials__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+
+            </li>
+            <li class="join-socials__item">
+              <a href="" class="join-socials__link">
+                <svg class="join-socials__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+
+            </li>
+            <li class="join-socials__item">
+              <a href="" class="join-socials__link">
+                <svg class="join-socials__icon" width="20" height="20">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
-        </address>
+        </div>
       </div>
-
-      <div class="join">
-        <h2 class="join__title">присоединяйтесь</h2>
-        <ul class="join-socials">
-
-          <li class="join-socials__item">
-            <a href="" class="join-socials__link">
-              <svg class="join-socials__icon" width="20" height="20">
-                <use href="./images/sprite.svg#instagram"></use>
-              </svg>
-            </a>
-
-          </li>
-          <li class="join-socials__item">
-            <a href="" class="join-socials__link">
-              <svg class="join-socials__icon" width="20" height="20">
-                <use href="./images/sprite.svg#twitter"></use>
-              </svg>
-            </a>
-
-          </li>
-          <li class="join-socials__item">
-            <a href="" class="join-socials__link">
-              <svg class="join-socials__icon" width="20" height="20">
-                <use href="./images/sprite.svg#facebook"></use>
-              </svg>
-            </a>
-
-          </li>
-          <li class="join-socials__item">
-            <a href="" class="join-socials__link">
-              <svg class="join-socials__icon" width="20" height="20">
-                <use href="./images/sprite.svg#linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-
 
       <div class="sign-in">
         <h3 class="sign-in__subtitle">Подпишитесь на рассылку</h3>
-
 
         <form class="sign-in__form">
           <label class="sign-in__label--visually-hidden visually-hidden">
